name:                reflex-dom-template
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.Template
                     , Reflex.Dom.Template.Rule
                     , Reflex.Dom.Template.Error
                     , Reflex.Dom.Template.ReflexToken
                     , Reflex.Dom.Template.ReflexToken.Parse
                     , Reflex.Dom.Template.ReflexToken.Render
                     , Reflex.Dom.Template.Xhr
  build-depends:       base >=4.9 && <4.13
                     , containers >=0.5 && <0.7
                     , dependent-map >= 0.2 && < 0.3
                     , html-entities >= 1.1 && < 1.2
                     , html-parse >= 0.2.0 && < 0.3
                     , lens >= 4.15.4 && < 4.17
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom-core >= 0.4 && < 0.5
                     , text >= 1.2 && < 1.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  if impl(ghcjs -any)
    ghc-options:         -dedupe
    cpp-options:         -DGHCJS_BROWSER
  default-language:    Haskell2010
